// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ui/shared/preuves/Bibliotheque/PreuveComplementaire Action Desactivee 1`] = `
<div
  className="flex flex-row gap-8 pt-2 pb-4"
>
  <div
    className="flex flex-1 flex-col"
  >
    <div
      data-test="item"
    >
      <div
        className="flex justify-between group text-sm text-bf500 hover:bg-bf975 px-2 py-1 max-w-2xl mb-0 cursor-pointer"
      >
        <a
          className="fr-text--sm fr-mb-1v fr-fi-file-line fr-link--icon-left"
          data-test="name"
          href="#"
          onClick={[Function]}
        >
          preuve_input.txt (TXT, 34 o)
        </a>
        <div
          className="invisible group-hover:visible"
        >
          <button
            className="ml-1 px-1 w-7 text-sm inline-block text-center fr-fi-chat-quote-line undefined"
            onClick={[Function]}
            title="Décrire"
          />
          <button
            className="ml-1 px-1 w-7 text-sm inline-block text-center fr-fi-delete-line fr-fi-delete-line"
            onClick={[Function]}
            title="Supprimer"
          />
        </div>
      </div>
      <p
        className="text-xs fr-text-mention--grey mb-0 "
        data-test="comment"
        onClick={[Function]}
      >
        lala
      </p>
      <span
        className="text-xs grey625"
      >
        Ajouté
         le 
        06 sept. 2022
         par 
        Yolo Dodo
      </span>
    </div>
    <span
      className="text-xs text-grey625"
    >
      1.1.3
      <p
        className="fr-badge fr-badge--no-icon fr-ml-4w fr-text-mention--grey fr-text--xs"
      >
        Non concerné
      </p>
    </span>
  </div>
  <div
    className="flex flex-1 flex-col"
  />
</div>
`;

exports[`Storyshots ui/shared/preuves/Bibliotheque/PreuveComplementaire Action Non Concernee 1`] = `
<div
  className="flex flex-row gap-8 pt-2 pb-4"
>
  <div
    className="flex flex-1 flex-col"
  >
    <div
      data-test="item"
    >
      <div
        className="flex justify-between group text-sm text-bf500 hover:bg-bf975 px-2 py-1 max-w-2xl mb-0 cursor-pointer"
      >
        <a
          className="fr-text--sm fr-mb-1v fr-fi-file-line fr-link--icon-left"
          data-test="name"
          href="#"
          onClick={[Function]}
        >
          preuve_input.txt (TXT, 34 o)
        </a>
        <div
          className="invisible group-hover:visible"
        >
          <button
            className="ml-1 px-1 w-7 text-sm inline-block text-center fr-fi-chat-quote-line undefined"
            onClick={[Function]}
            title="Décrire"
          />
          <button
            className="ml-1 px-1 w-7 text-sm inline-block text-center fr-fi-delete-line fr-fi-delete-line"
            onClick={[Function]}
            title="Supprimer"
          />
        </div>
      </div>
      <p
        className="text-xs fr-text-mention--grey mb-0 "
        data-test="comment"
        onClick={[Function]}
      >
        lala
      </p>
      <span
        className="text-xs grey625"
      >
        Ajouté
         le 
        06 sept. 2022
         par 
        Yolo Dodo
      </span>
    </div>
    <span
      className="text-xs text-grey625"
    >
      1.1.3
      <p
        className="fr-badge fr-badge--no-icon fr-ml-4w fr-text-mention--grey fr-text--xs"
      >
        Non concerné
      </p>
    </span>
  </div>
  <div
    className="flex flex-1 flex-col"
  />
</div>
`;

exports[`Storyshots ui/shared/preuves/Bibliotheque/PreuveComplementaire Fichier 1`] = `
<div
  className="flex flex-row gap-8 pt-2 pb-4"
>
  <div
    className="flex flex-1 flex-col"
  >
    <div
      data-test="item"
    >
      <div
        className="flex justify-between group text-sm text-bf500 hover:bg-bf975 px-2 py-1 max-w-2xl mb-0 cursor-pointer"
      >
        <a
          className="fr-text--sm fr-mb-1v fr-fi-file-line fr-link--icon-left"
          data-test="name"
          href="#"
          onClick={[Function]}
        >
          preuve_input.txt (TXT, 34 o)
        </a>
        <div
          className="invisible group-hover:visible"
        >
          <button
            className="ml-1 px-1 w-7 text-sm inline-block text-center fr-fi-chat-quote-line undefined"
            onClick={[Function]}
            title="Décrire"
          />
          <button
            className="ml-1 px-1 w-7 text-sm inline-block text-center fr-fi-delete-line fr-fi-delete-line"
            onClick={[Function]}
            title="Supprimer"
          />
        </div>
      </div>
      <p
        className="text-xs fr-text-mention--grey mb-0 "
        data-test="comment"
        onClick={[Function]}
      >
        lala
      </p>
      <span
        className="text-xs grey625"
      >
        Ajouté
         le 
        06 sept. 2022
         par 
        Yolo Dodo
      </span>
    </div>
    <span
      className="text-xs text-grey625"
    >
      1.1.3
    </span>
  </div>
  <div
    className="flex flex-1 flex-col"
  />
</div>
`;

exports[`Storyshots ui/shared/preuves/Bibliotheque/PreuveComplementaire Lien 1`] = `
<div
  className="flex flex-row gap-8 pt-2 pb-4"
>
  <div
    className="flex flex-1 flex-col"
  >
    <div
      data-test="item"
    >
      <div
        className="flex justify-between group text-sm text-bf500 hover:bg-bf975 px-2 py-1 max-w-2xl mb-0 cursor-pointer"
      >
        <a
          className="fr-text--sm fr-mb-1v fr-fi-links-fill fr-link--icon-left"
          data-test="name"
          href="#"
          onClick={[Function]}
        >
          dodo
        </a>
        <div
          className="invisible group-hover:visible"
        >
          <button
            className="ml-1 px-1 w-7 text-sm inline-block text-center fr-fi-chat-quote-line undefined"
            onClick={[Function]}
            title="Décrire"
          />
          <button
            className="ml-1 px-1 w-7 text-sm inline-block text-center fr-fi-delete-line fr-fi-delete-line"
            onClick={[Function]}
            title="Supprimer"
          />
        </div>
      </div>
      <span
        className="text-xs grey625"
      >
        Ajouté
         le 
        06 sept. 2022
         par 
        Yolo Dodo
      </span>
    </div>
    <span
      className="text-xs text-grey625"
    >
      1.1.3
    </span>
  </div>
  <div
    className="flex flex-1 flex-col"
  />
</div>
`;
